--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "OpenSource_Project/commons-lang"]
 	path = OpenSource_Project/commons-lang
 	url = https://github.com/apache/commons-lang.git
+[submodule "OpenSource_Project/OpenSource_Project/netty"]
+	path = OpenSource_Project/OpenSource_Project/netty
+	url = https://github.com/netty/netty.git
+[submodule "OpenSource_Project/netty"]
+	path = OpenSource_Project/netty
+	url = https://github.com/netty/netty.git
